name: atom-conduit
version: 0.6.0.0
cabal-version: >=1.10
build-type: Simple
license: PublicDomain
license-file: LICENSE
maintainer: koral
synopsis: Streaming parser/renderer for the Atom 1.0 standard (RFC 4287).
description: Cf README.
category: XML, Conduit
author: koral
extra-source-files:
    README.md

source-repository head
    type: git
    location: git://github.com/k0ral/atom-conduit.git

flag enable-hlint-test
  description: Enable hlint test-suite
  manual: True
  default: False

library
    exposed-modules:
        Text.Atom.Conduit.Parse
        Text.Atom.Conduit.Render
        Text.Atom.Lens
        Text.Atom.Types
    build-depends:
        base >=4.9 && <5,
        blaze-builder -any,
        conduit >=1.3,
        safe-exceptions -any,
        lens-simple -any,
        parsers -any,
        refined -any,
        text -any,
        time >=1.5,
        timerep >=2.0,
        uri-bytestring >=0.2,
        xml-conduit >=1.5,
        xml-types -any
    default-language: Haskell2010

test-suite quickcheck
    type: exitcode-stdio-1.0
    main-is: QuickCheck.hs
    build-depends:
        atom-conduit -any,
        base >=4.9,
        conduit >=1.3,
        quickcheck-instances -any,
        refined -any,
        tasty -any,
        tasty-quickcheck -any,
        time >=1.5,
        text -any,
        uri-bytestring >=0.2,
        xml-types -any
    default-language: Haskell2010
    hs-source-dirs: test

test-suite golden-tests
    type: exitcode-stdio-1.0
    main-is: GoldenTests.hs
    build-depends:
        atom-conduit -any,
        base >=4.9,
        conduit >=1.3,
        data-default -any,
        filepath -any,
        pretty-simple -any,
        resourcet -any,
        tasty -any,
        tasty-golden -any,
        text -any,
        xml-conduit >=1.4
    default-language: Haskell2010
    hs-source-dirs: test

test-suite unit-tests
    type: exitcode-stdio-1.0
    main-is: UnitTests.hs
    build-depends:
        atom-conduit -any,
        base >=4.9,
        conduit >=1.3,
        data-default -any,
        lens-simple -any,
        refined -any,
        resourcet -any,
        tasty -any,
        tasty-hunit -any,
        time >=1.5,
        uri-bytestring >=0.2,
        xml-conduit >=1.4
    default-language: Haskell2010
    hs-source-dirs: test

test-suite hlint
    if flag(enable-hlint-test)
      buildable: True
    else
      buildable: False
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    build-depends:
        base >=4.8,
        hlint -any
    default-language: Haskell2010
    hs-source-dirs: test
