cabal-version: 2.2
name: atom-conduit
version: 0.6.0.0
build-type: Simple
license: CC0-1.0
license-file: LICENSE
author: koral
maintainer: chahine.moreau@gmail.com
bug-reports: https://github.com/k0ral/atom-conduit/issues
synopsis: Streaming parser/renderer for the Atom 1.0 standard (RFC 4287).
description: Cf README.
category: XML, Conduit
tested-with: GHC ==8.6.3 || ==8.4.4 || ==8.2.2 || ==8.0.2
extra-source-files:
    README.md

source-repository head
    type: git
    location: git://github.com/k0ral/atom-conduit.git

flag enable-hlint-test
  description: Enable hlint test-suite
  manual: True
  default: False

common common
    build-depends:
        base >=4.7 && <5,
        base-compat-batteries
    default-language: Haskell2010


library
    import: common
    exposed-modules:
        Text.Atom.Conduit.Parse
        Text.Atom.Conduit.Render
        Text.Atom.Lens
        Text.Atom.Types
    build-depends:
        blaze-builder -any,
        conduit >=1.3,
        safe-exceptions -any,
        lens-simple -any,
        parsers -any,
        refined -any,
        text -any,
        time >=1.5,
        timerep >=2.0,
        uri-bytestring >=0.2,
        xml-conduit >=1.5,
        xml-types -any

test-suite quickcheck
    import: common
    type: exitcode-stdio-1.0
    main-is: QuickCheck.hs
    build-depends:
        atom-conduit -any,
        conduit >=1.3,
        quickcheck-instances -any,
        refined -any,
        tasty -any,
        tasty-quickcheck -any,
        time >=1.5,
        text -any,
        uri-bytestring >=0.2,
        xml-types -any
    hs-source-dirs: test

test-suite golden-tests
    import: common
    type: exitcode-stdio-1.0
    main-is: GoldenTests.hs
    build-depends:
        atom-conduit -any,
        conduit >=1.3,
        data-default -any,
        filepath -any,
        pretty-simple -any,
        resourcet -any,
        tasty -any,
        tasty-golden -any,
        text -any,
        xml-conduit >=1.4
    hs-source-dirs: test

test-suite unit-tests
    import: common
    type: exitcode-stdio-1.0
    main-is: UnitTests.hs
    build-depends:
        atom-conduit -any,
        conduit >=1.3,
        data-default -any,
        lens-simple -any,
        refined -any,
        resourcet -any,
        tasty -any,
        tasty-hunit -any,
        time >=1.5,
        uri-bytestring >=0.2,
        xml-conduit >=1.4
    hs-source-dirs: test

test-suite hlint
    import: common
    if flag(enable-hlint-test)
      buildable: True
    else
      buildable: False
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    build-depends: hlint -any
    hs-source-dirs: test
